# jv-lang

./: .env  .gitignore  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README-en.md  README.md  flake.nix  install.sh
jv/: BUILD.md  Cargo.toml  DISK_SPACE_OPTIMIZATION.md  compiler_tasks.md  disk_usage_report.sh  test.jv  test_comprehensive.jv  test_simple.jv
jv/.cargo/: config.toml
jv/benchmarks/: basic_syntax_sugar.rs
jv/build-config/: global-repositories.toml
jv/checklists/lang-core/lexer/: lexer_implementation.md
jv/checklists/worker/codegen/: mapper.md  type.md
jv/checklists/worker/lang-core/: ast.md  checker.md  ir.md
jv/crates/jv_ast/: Cargo.toml
jv/crates/jv_ast/src/: annotation.rs  binding_pattern.rs  comments.rs  expression.rs  json.rs  lib.rs  statement.rs  strings.rs  tests.rs  types.rs  utils.rs
jv/crates/jv_ast/tests/: expression_tests.rs  generics.rs  integration_tests.rs  statement_tests.rs
jv/crates/jv_build/: Cargo.toml
jv/crates/jv_build/src/: config.rs  jdk.rs  lib.rs  tests.rs
jv/crates/jv_build/tests/: conversion_catalog.rs  conversion_detector.rs
jv/crates/jv_checker/: Cargo.toml
jv/crates/jv_checker/benches/: java_inference.rs
jv/crates/jv_checker/src/: diagnostics.rs  lib.rs  normalize.rs  tests.rs  tuple_planner.rs
jv/crates/jv_checker/tests/: doublebrace_plan.rs  imports.rs  inference_conversions.rs  iteration_tests.rs  labels.rs  null_safety.rs  patterns.rs  regex_command.rs  regex_diagnostics.rs  regex_is.rs  tuple.rs  type_inference.rs
jv/crates/jv_cli/: Cargo.toml  build.rs
jv/crates/jv_cli/src/: embedded_stdlib.rs  java_type_names.rs  lib.rs  logging_overrides.rs  main.rs  sequence_warnings.rs  tests.rs
jv/crates/jv_cli/tests/: basic_syntax_sugar.rs  cli_end_to_end.rs  debug_ir.rs  diagnostics.rs  e2e_regex_command.rs  integration_doublebrace.rs  java_target_matrix.rs  junit5_integration.rs  logging_integration.rs  project_integration.rs  sample_tests.rs  telemetry_output.rs  tour_tests.rs  tuple_literal.rs
jv/crates/jv_codegen_java/: Cargo.toml
jv/crates/jv_codegen_java/benches/: pattern_switch.rs  target_matrix.rs
jv/crates/jv_codegen_java/src/: .tests.rs.pending-snap  builder.rs  config.rs  destructure.rs  error.rs  generator.rs  java21.rs  lib.rs  record.rs  target_version.rs  tests.rs  types.rs
jv/crates/jv_codegen_java/tests/: advanced_generics_golden.rs  annotations.rs  conversions.rs  doublebrace_output.rs  generics.rs  logging.rs  loops.rs  raw_string_literals.rs  sequence_golden.rs  sequence_streams.rs  tuple.rs  type_erasure.rs  whitespace_arrays.rs
jv/crates/jv_docs/: Cargo.toml
jv/crates/jv_docs/src/: lib.rs
jv/crates/jv_docs/tests/: validate_examples.rs
jv/crates/jv_dsl_api/: Cargo.toml
jv/crates/jv_dsl_api/src/: block_plugin.rs  global_operator_plugin.rs  lib.rs  token_plugin.rs
jv/crates/jv_dsl_builtin/: Cargo.toml
jv/crates/jv_dsl_builtin/src/: assert.rs  cron.rs  io.rs  lib.rs  lock.rs  log.rs
jv/crates/jv_dsl_features/: Cargo.toml
jv/crates/jv_dsl_features/src/: lib.rs
jv/crates/jv_fmt/: Cargo.toml
jv/crates/jv_fmt/src/: lib.rs  tests.rs
jv/crates/jv_inference/: Cargo.toml
jv/crates/jv_inference/benches/: constraint_solving.rs  generics_bench.rs
jv/crates/jv_inference/src/: config.rs  doublebrace.rs  lib.rs  session.rs  types.rs
jv/crates/jv_ir/: Cargo.toml  README.md
jv/crates/jv_ir/benches/: basic_syntax_sugar.rs  (+1 more)
jv/crates/jv_lexer/: Cargo.toml
jv/crates/jv_lsp/: Cargo.toml
jv/crates/jv_mapper/: Cargo.toml
jv/crates/jv_parser/: Cargo.toml
jv/crates/jv_parser2/: Cargo.toml
jv/crates/jv_parser_frontend/: Cargo.toml
jv/crates/jv_parser_preprocess/: Cargo.toml
jv/crates/jv_parser_rowan/: Cargo.toml
jv/crates/jv_parser_semantics/: Cargo.toml
jv/crates/jv_parser_syntax/: Cargo.toml
jv/crates/jv_parser_syntax_expressions/: Cargo.toml
jv/crates/jv_parser_syntax_statements/: Cargo.toml
jv/crates/jv_parser_syntax_support/: Cargo.toml
jv/crates/jv_pm/: Cargo.toml  build.rs
jv/crates/jv_support/: Cargo.toml
jv/crates/jv_type_inference_java/: Cargo.toml
jv/docs/: README-en.md  README.md  android-policy-en.md  android-policy.md  architecture-en.md  architecture.md  cli-reference-en.md  cli-reference.md  contributing-en.md  contributing.md  getting-started-en.md  getting-started.md  java-interop-en.md  java-interop.md  java-target-matrix.md  language-guide-en.md  language-guide.md  language-spec-en.md  language-spec.md  pattern-matching-en.md  pattern-matching.md  perf-baselines-en.md  perf-baselines.md  project-structure-en.md  project-structure.md  release-notes-ir-java-codegen-en.md  release-notes-ir-java-codegen.md  sample-annotation-en.md  sample-annotation.md  whitespace-arrays-en.md  whitespace-arrays.md
jv/docs/language/: json-en.md  json.md  raw-strings.md  regex-diagnostics.md
jv/examples/: 02-variables.jv  03-functions.jv  04-collections.jv  05-string-interpolation.jv  06-basic-types.jv  07-arithmetic.jv  README.md  collections-mini.jv  data-records.jv  hash_label_flow.jv  pattern-routing.jv  quick-tour.jv  regex-command.jv  tuple_demo.jv
jv/examples/data-class-gallery/: jv.toml
jv/examples/doublebrace-init-block/: jv.toml
jv/examples/functions-and-loops/: jv.toml
jv/examples/hello-jv/: jv.toml
jv/examples/sequence-pipeline/: jv.toml
jv/examples/variables-and-strings/: jv.toml
jv/examples/when-expressions/: jv.toml
jv/resources/: diagnostics_en.toml  diagnostics_ja.toml
jv/stdlib/collections/: sequence.jv
jv/tests/: cli_project_structure.rs  fixture_runner.rs  integration_tests.rs  java_codegen.rs  java_target_matrix.rs  junit5_integration.rs  logging_codegen.rs  performance_regression.rs  transpile_whitespace.rs
jv/tests/fixtures/: 02-variables.jv  comment_metadata_sample.jv  data_class.java  data_class.jv  sample_metrics.csv  sample_users.json  sample_users_comment.json
jv/tests/integration/: basic_syntax_sugar.rs  java_annotation_pass_through.rs  raw_string_literals.rs  tuple_literal.rs
jv/tests/performance/: jv.toml  phase1.jv  phase1.rs
(+879 files in other folders)
