[package]
name = "jv_build"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
anyhow.workspace = true
which = "4.4"
jv_pm.workspace = true
zip = "0.6"
jv_ir.workspace = true
blake3 = "1.5"
bincode = "1.3"
sysinfo = "0.29"
tracing.workspace = true
libc = "0.2"
