[package]
name = "jv_checker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
jv_ast = { workspace = true }
jv_lexer = { workspace = true }
jv_parser = { workspace = true }
jv_ir = { workspace = true }
jv_inference = { workspace = true }
