[package]
name = "jv_checker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
autobenches = false

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
jv_ast = { workspace = true }
jv_lexer = { workspace = true }
jv_parser_frontend = { workspace = true }
jv_ir = { workspace = true }
jv_inference = { workspace = true }
jv_build = { workspace = true }
jv_pm = { workspace = true }
jv_support = { workspace = true }
jv_mapper = { workspace = true }
once_cell = { workspace = true }
jv_type_inference_java = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
test-case = { workspace = true }
fastrand = { workspace = true }

[[test]]
name = "java_inference_bench"
path = "benches/java_inference.rs"

[[test]]
name = "java_codegen"
path = "../../tests/java_codegen.rs"
