[package]
name = "jv_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "jv"
path = "src/main.rs"

[[bin]]
name = "jvx"
path = "src/bin/jvx.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
jv_lexer.workspace = true
jv_parser.workspace = true
jv_ir.workspace = true
jv_codegen_java.workspace = true
jv_build.workspace = true
jv_fmt.workspace = true
jv_checker.workspace = true
jv_mapper.workspace = true
jv_pm.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
zip = { version = "0.6", default-features = false, features = ["deflate"] }
