[package]
name = "jv_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[features]
default = []
dump-sequence-ast = []

[[bin]]
name = "jv"
path = "src/main.rs"

[[bin]]
name = "jvx"
path = "src/bin/jvx.rs"

[[test]]
name = "performance_regression"
path = "../../tests/performance_regression.rs"

[[test]]
name = "fixture_runner"
path = "../../tests/fixture_runner.rs"
harness = false

[[test]]
name = "raw_string_literals"
path = "../../tests/integration/raw_string_literals.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
jv_lexer.workspace = true
jv_parser_frontend.workspace = true
jv_parser_rowan.workspace = true
jv_ir = { workspace = true, features = ["debug-ir"] }
jv_codegen_java.workspace = true
jv_build.workspace = true
jv_fmt.workspace = true
jv_checker.workspace = true
jv_inference.workspace = true
jv_mapper.workspace = true
jv_pm.workspace = true
jv_support.workspace = true
jv_ast.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
toml.workspace = true
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tracing.workspace = true

[build-dependencies]
anyhow.workspace = true
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.10"
sha2 = "0.10"
