[package]
name = "jv_codegen_java"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jv_ir.workspace = true
jv_ast.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta = { version = "1.39", features = ["redactions"] }
serde_json.workspace = true
