[package]
name = "jv_codegen_java"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jv_ir.workspace = true
jv_ast.workspace = true
serde.workspace = true
serde_json.workspace = true
csv = "1.3"
thiserror.workspace = true
jv_pm.workspace = true

[dev-dependencies]
insta = { version = "1.39", features = ["redactions"] }
serde_json.workspace = true
criterion = "0.5"

[[bench]]
name = "target_matrix"
harness = false

[[bench]]
name = "pattern_switch"
harness = false
