[package]
name = "jv_codegen_java"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
junit5_integration_bench = []

[dependencies]
jv_ir.workspace = true
jv_ast.workspace = true
jv_build.workspace = true
serde.workspace = true
serde_json.workspace = true
csv = "1.3"
thiserror.workspace = true
jv_pm.workspace = true
jv_mapper.workspace = true

[dev-dependencies]
insta = { version = "1.39", features = ["redactions"] }
serde_json.workspace = true
criterion = "0.5"
jv_parser_frontend.workspace = true
jv_parser_rowan.workspace = true

[[bench]]
name = "target_matrix"
harness = false

[[bench]]
name = "pattern_switch"
harness = false
