[package]
name = "jv_dsl_builtin"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
dsl-log = []
dsl-io = []
dsl-lock = []
dsl-cron = []
dsl-assert = []
dsl-all = ["dsl-log", "dsl-io", "dsl-lock", "dsl-cron", "dsl-assert"]

[dependencies]
jv_dsl_api = { path = "../jv_dsl_api" }
serde_json = { workspace = true }
