[package]
name = "jv_inference"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hindley-Milner type inference engine for the jv language"

[dependencies]
jv_ast = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rustc-hash = "1.1"
smallvec = "1.13"
