[package]
name = "jv_ir"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
debug-ir = []

[dependencies]
anyhow = { workspace = true }
jv_ast.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jv_support.workspace = true
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2.4"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.10"
which = "4.4"
urlencoding = "2.1"
csv = "1.3"
