[package]
name = "jv_ir"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
debug-ir = []
perf-metrics = []

[[test]]
name = "perf_phase1"
path = "../../tests/performance/phase1.rs"

[dependencies]
anyhow = { workspace = true }
jv_ast.workspace = true
jv_parser.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jv_support.workspace = true
ureq = { version = "2.9" }
url = "2.4"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.10"
which = "4.4"
urlencoding = "2.1"
csv = "1.3"
