[package]
name = "jv_ir"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
debug-ir = []
perf-metrics = []

[[test]]
name = "perf_phase1"
path = "../../tests/performance/phase1.rs"

[dependencies]
anyhow = { workspace = true }
rust_decimal = { workspace = true }
jv_ast.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jv_support.workspace = true
ureq = { version = "2.10" }
url = "2.5"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.12"
which = "7.0"
urlencoding = "2.1"
csv = "1.3"
tracing.workspace = true
ahash = "0.8"
unicode-normalization = "0.1"

[dev-dependencies]
criterion = "0.5"
jv_parser_frontend.workspace = true

[[bench]]
name = "basic_syntax_sugar"
path = "benches/basic_syntax_sugar.rs"
harness = false
