[package]
name = "jv_lexer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
unicode-normalization = "0.1"
unicode-ident = "1.0"

[dev-dependencies]
test-case.workspace = true
