[package]
name = "jv_lexer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
trace-stages = ["dep:tracing"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
unicode-normalization = "0.1"
unicode-ident = "1.0"
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5"
test-case.workspace = true

[[bench]]
name = "pipeline"
harness = false
