[package]
name = "jv_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "jv-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jv_parser_frontend.workspace = true
jv_parser_rowan.workspace = true
jv_ir.workspace = true
jv_checker.workspace = true
jv_ast.workspace = true
jv_lexer.workspace = true
jv_inference.workspace = true
jv_build.workspace = true
jv_support.workspace = true
