[package]
name = "jv_parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chumsky.workspace = true
jv_lexer.workspace = true
jv_ast.workspace = true
thiserror.workspace = true

[dev-dependencies]
test-case.workspace = true
jv_ir.workspace = true
insta.workspace = true

[[bench]]
name = "sequence_layout_bench"
harness = false
