[package]
name = "jv_parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["rowan-parser"]
rowan-parser = ["dep:jv_parser_rowan", "jv_parser_rowan/rowan-parser"]
legacy-tests = []

[dependencies]
jv_lexer.workspace = true
jv_ast.workspace = true
jv_parser_preprocess.workspace = true
jv_parser_semantics.workspace = true
jv_parser_frontend.workspace = true
jv_parser_rowan = { path = "../jv_parser_rowan", optional = true }

[dev-dependencies]
test-case.workspace = true
jv_ir.workspace = true
insta.workspace = true

[[bench]]
name = "sequence_layout_bench"
harness = false
