[package]
name = "jv_parser2"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["dsl-all"]
dsl-log = ["dep:jv_dsl_api", "dep:jv_dsl_builtin", "jv_dsl_api/dsl-log", "jv_dsl_builtin/dsl-log"]
dsl-io = ["dep:jv_dsl_api", "dep:jv_dsl_builtin", "jv_dsl_api/dsl-io", "jv_dsl_builtin/dsl-io"]
dsl-lock = ["dep:jv_dsl_api", "dep:jv_dsl_builtin", "jv_dsl_api/dsl-lock", "jv_dsl_builtin/dsl-lock"]
dsl-cron = ["dep:jv_dsl_api", "dep:jv_dsl_builtin", "jv_dsl_api/dsl-cron", "jv_dsl_builtin/dsl-cron"]
dsl-assert = ["dep:jv_dsl_api", "dep:jv_dsl_builtin", "jv_dsl_api/dsl-assert", "jv_dsl_builtin/dsl-assert"]
dsl-all = ["dsl-log", "dsl-io", "dsl-lock", "dsl-cron", "dsl-assert"]

[dependencies]
bitflags = "2.4"
bumpalo = "3.14"
jv_dsl_api = { path = "../jv_dsl_api", optional = true }
jv_dsl_builtin = { path = "../jv_dsl_builtin", optional = true }
jv_ast = { path = "../jv_ast" }
unicode-ident = "1.0"
serde_json = { workspace = true }
