[package]
name = "jv_parser_syntax_statements"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chumsky.workspace = true
jv_ast.workspace = true
jv_lexer.workspace = true
jv_parser_syntax_expressions.workspace = true
jv_parser_syntax_support.workspace = true
jv_parser_semantics.workspace = true

[lib]
crate-type = ["rlib"]
