[package]
name = "jv_pm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
indexmap.workspace = true
semver.workspace = true
once_cell.workspace = true
anyhow.workspace = true
clap.workspace = true
